Changes with melon 2.5.0                                          16 Sep 2022
    *) Updated rbtree functions
    *) Optimized iothread
    *) Upgraded event to support multi-thread
    *) Fixed select error on Windows
    *) Upgraded Melang to enable tasks to execute across threads
    *) Fixed event break
    *) Updated docs

Changes with melon 2.4.1                                          04 Sep 2022
    *) Updated configure shell
    *) Added iothread component
    *) Updated docs

Changes with melon 2.4.0                                          28 Aug 2022
    *) Optimized memory pool to support hierarchical pool
    *) Optimized configuration processing
    *) Updated fib-heap to support memory pool
    *) Updated spinlock
    *) Optimized core library, moved melang library to repository Melang
    *) Fixed dlopen memory bug in melang import function
    *) Added new function in script interpreter
    *) Updated docs
    *) Added English docs

Changes with melon 2.3.4                                          18 Aug 2022
    *) Added parent pool for memory pool component
    *) Upgraded mln_import to have a return value in script layer
    *) Added master processing handle for multi-process framework
    *) Updated docs

Changes with melon 2.3.3                                          19 May 2022
    *) Added more path hook
    *) Added log hook
    *) Fixed JSON bug
    *) Fixed file name bug in melang error tips
    *) Added string trim, upper, lower and join
    *) Updated docs

Changes with melon 2.3.2                                          29 Apr 2022
    *) Fixed warnings on gcc 11.x and mingw
    *) Added path hook
    *) Added log hook
    *) Updated docs

Changes with melon 2.3.1                                          18 Apr 2022
    *) Fixed warning on Win32
    *) Fixed fib-heap bug
    *) Updated docs

Changes with melon 2.3.0                                          14 Apr 2022
    *) Fixed json bugs
    *) Fixed melang msgqueue bugs